cmake_minimum_required(VERSION 2.8)
project(cosmos)

set(DIR "${CMAKE_CURRENT_SOURCE_DIR}/..")
include_directories("${DIR}")
include_directories("${DIR}/ext/windows/include")
cmake_policy(SET CMP0015 NEW)
link_directories("${DIR}/ext/windows/lib")

set(SOURCES "${DIR}/gen/supercosmos.c")
add_executable(cosmos "${SOURCES}")

if(WIN32)
    target_link_libraries(cosmos wsock32 mingw32 opengl32 glew32 lua51)
    set(CMAKE_EXE_LINKER_FLAGS "-Wl,--export-all-symbols")
else(APPLE)
    target_link_libraries(cosmos luajit-5.1)
    set(CMAKE_EXE_LINKER_FLAGS "-pagezero_size 10000 -image_base 100000000 -framework OpenGL")
else(1)
    set(CMAKE_EXE_LINKER_FLAGS "-rdynamic")
endif(WIN32)

target_link_libraries(cosmos m SDL2main SDL2 SDL2_image)
set(CMAKE_C_FLAGS "-g -std=c99 -Wall -Wextra -Wno-missing-field-initializers -Wno-missing-braces")

if(WIN32)
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -mno-ms-bitfields -DWINDOWS -DGLEW")
else(APPLE)
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DDARWIN")
endif(WIN32)
